--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-# rcov generated
 coverage
 coverage.data
-
-# rdoc generated
 rdoc
-
-# yard generated
 doc
 .yardoc
-
-# bundler
 .bundle
-
-# juwelier generated
 pkg
+.directory
